--- a/cypher.html
+++ b/cypher.html
@@ -48,7 +48,7 @@
 	<center>
 
 	  <div id="SubTitleText">
-	    <h1><i>Cypher / Decypher</i></h1>
+	    <h1><i>Encrypt / Decrypt</i></h1>
 	  </div>
 	  <div id="RoundedFrame">
 
