Separate out encryption and decryption

--- a/cypher.html
+++ b/cypher.html
@@ -44,18 +44,15 @@
 
       // Stub for requesting encryption of text
       function getEncrypted(plaintext){
-
-          <!-- var cypher_url = "Some URL"; -->
-	  <!-- alert("Getting ENCRYPTING of " + plaintext); -->
-	  <!-- console.log("Fetching CYPHER text from URL: " + cypher_url); -->
+          var cypher_url = "HTTPS://CYPHERURL ";
+	  console.log("Fetching CYPHER text for " + plaintext + "from URL: " + cypher_url);
 	  return "ENCRYPTED TEXT";
       }
 
       // Stub for requesting decryption of text
       function getDecrypted(encryptedtext){
-          <!-- var cypher_url = "Some URL"; -->
-	  <!-- console.log("Fetching PLAIN text from URL: " + cypher_url); -->
-	  <!-- plaintext = "PLAINTEXT"; -->
+          var cypher_url = "HTTPS://DECRYPTURL ";
+	  console.log("Fetching PLAIN text from URL: " + cypher_url);
 	  return "PLAINTEXT";
       }
 
